The web version.  Add pointer: fine.

--- a/VisualPassword.Web/index.html
+++ b/VisualPassword.Web/index.html
@@ -340,7 +340,7 @@
             padding: 5px;
         }
 
-        @media (hover: hover)
+        @media (hover: hover) and (pointer: fine)
         {
             .symbol:hover
             {
@@ -438,7 +438,7 @@
             flex: 1 0 auto;
         }
 
-        @media (hover: hover)
+        @media (hover: hover) and (pointer: fine)
         {
             .controlButton:hover
             {
@@ -461,7 +461,7 @@
             border-style: solid;
         }
 
-        @media (hover: hover)
+        @media (hover: hover) and (pointer: fine)
         {
             .controlApply:hover
             {
@@ -577,7 +577,7 @@
             color: var(--content-text-color);
         }
 
-        @media (hover: hover)
+        @media (hover: hover) and (pointer: fine)
         {
             .githubLink:hover
             {
