--- a/VisualPassword.Web/index.html
+++ b/VisualPassword.Web/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Visual Password</title>
-    <link
-            rel="icon"
-            type="image/png"
-            sizes="48x48"
-            href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwBAMAAAClLOS0AAAAD1BMVEUAAAD/DAUAAAgAnAD/6oEyi9cgAAAAAXRSTlMAQObYZgAAAHlJREFUOMut0MENgCAUA1DDBhgHwMoE4gLGv/9M9mDShIvh8xtOfYcCS0ASUGIA1dqJAEjIWwxgz4w9DWUOEtjSpkADzAxoIK+YBg3oEx2gN/O4QQPds4dBA91dnYBqdn+tBnxwtHYZw1YDLuB1aQxbDrhBBrVj8J8XeqJLqeI+DkMAAAAASUVORK5CYII="
-    />
+    <link rel="icon" type="image/png" sizes="48x48" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwBAMAAAClLOS0AAAAD1BMVEUAAAD/DAUAAAgAnAD/6oEyi9cgAAAAAXRSTlMAQObYZgAAAHlJREFUOMut0MENgCAUA1DDBhgHwMoE4gLGv/9M9mDShIvh8xtOfYcCS0ASUGIA1dqJAEjIWwxgz4w9DWUOEtjSpkADzAxoIK+YBg3oEx2gN/O4QQPds4dBA91dnYBqdn+tBnxwtHYZw1YDLuB1aQxbDrhBBrVj8J8XeqJLqeI+DkMAAAAASUVORK5CYII="/>
 
     <style>
         :root
