--- a/VisualPassword.Web/index.html
+++ b/VisualPassword.Web/index.html
@@ -42,6 +42,12 @@
             --attention-text-color: #EF7878;
         }
 
+        html:has(body.chromeExtension)
+        {
+            scrollbar-width: thin;
+            scrollbar-color: var(--navbar-scrollbar-color1) var(--navbar-scrollbar-color2);
+        }
+
         body
         {
             font-family: "Open Sans", sans-serif;
@@ -56,6 +62,13 @@
             display: flex;
             min-height: 100vh;
             justify-content: center;
+            scrollbar-width: thin;
+            scrollbar-color: var(--navbar-scrollbar-color1) var(--navbar-scrollbar-color2);
+        }
+
+        body.chromeExtension
+        {
+            width: 784px;
         }
 
         .bodyWrapper
@@ -71,6 +84,7 @@
             padding: 10px;
             hyphens: auto;
             text-align: justify;
+            user-select: none;
         }
 
         input:focus
