--- a/VisualPassword.Web/index.html
+++ b/VisualPassword.Web/index.html
@@ -81,9 +81,15 @@
 
         @media screen and (max-width: 384px)
         {
+            body
+            {
+                flex-direction: column;
+                align-items: center;
+            }
+
             .bodyWrapper
             {
-                transform: scale(0.95);
+                transform: translateY(-24px) scale(0.95);
             }
         }
 
