Web. Added a smooth color change.

--- a/VisualPassword.Web/index.html
+++ b/VisualPassword.Web/index.html
@@ -51,6 +51,11 @@
             --attention-text-color: #EF7878;
         }
 
+        *
+        {
+            transition: color, background-color, border-color .15s ease-in-out;
+        }
+
         html:has(body.chromeExtension)
         {
             scrollbar-width: thin;
