Web. Spell checker disabled for keyword.

--- a/VisualPassword.Web/index.html
+++ b/VisualPassword.Web/index.html
@@ -698,7 +698,7 @@
                         <div class="helpText">A keyword describing the password being created: google, facebook, etc</div>
                     </div>
                     <div class="inputWrapper">
-                        <input type="text" id="keywordInput" class="input keywordInput"/>
+                        <input type="text" id="keywordInput" class="input keywordInput" spellcheck="false" autocorrect="off" autocapitalize="none"/>
                         <div class="inputButtons">
                             <div id="keywordClear" class="inputButton inputButtonClear"></div>
                         </div>
